--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,6 +34,7 @@ limitations under the License.
         <div>
             <p>
                 Welcome to Code U! Hello from Team 9!
+                Mark is the greatest
             </p>
         </div>
         </div>
